Fix letter spacing

--- a/components/Footer/Footer.module.scss
+++ b/components/Footer/Footer.module.scss
@@ -12,8 +12,8 @@
 .copyright {
   @include rublena();
   @include blend-content();
+  @include letter-spacing(0.1em);
   font-size: 10px;
-  letter-spacing: 0.1em;
   white-space: nowrap;
   grid-row-start: 4;
 }
