--- a/components/ProjectPage/ProjectPage.module.scss
+++ b/components/ProjectPage/ProjectPage.module.scss
@@ -1,9 +1,20 @@
 @import "../../styles/common";
 
+.pageLayout {
+  & > * {
+    position: relative;
+    z-index: $layer-interactive;
+  }
+}
+
 .initials {
+  grid-row-start: 1;
   grid-column-start: 4;
   justify-self: end;
   display: flex;
+  margin-right: -0.11em;
+  mix-blend-mode: difference;
+  color: $color-light-background;
 
   a {
     text-decoration: none;
@@ -17,7 +28,7 @@
 
 .label {
   font-size: 20px;
-  letter-spacing: 0.08em;
+  @include letter-spacing(0.08em);
   grid-column-start: 4;
   grid-row-start: 2;
   display: flex;
